--- a/css/styleCascadas.css
+++ b/css/styleCascadas.css
@@ -98,7 +98,7 @@ nav {
     transition: all box-shadow 0.3s ease;
     background-color: rgba(2, 2, 2, .5);    
     border-radius: 0.5rem;
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -116,6 +116,14 @@ nav {
 .below-title {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;    
+}
+@media screen and (max-width: 800px) {
+    /* nav-bar view */
+    .bar-nav a {
+        font-size: 0.75em;
+        margin: 1px 1em;
+    }
 }
